Remove JDK21 specific code in compiler.